--- a/nginx.conf
+++ b/nginx.conf
@@ -1,20 +1,34 @@
-user root;
-worker_processes 1;
-
 events {}
-
 
 http {
     server {
         listen 80;
+        server_name corrdev.ru www.corrdev.ru;
 
-        server_name 82.179.51.83;
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
+
+        location / {
+            return 301 https://$host$request_uri;
+        }
+    }
+
+    server {
+        listen 443 ssl;
+        server_name yourdomain.com;
+
+        ssl_certificate /etc/letsencrypt/live/yourdomain.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/yourdomain.com/privkey.pem;
+
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
 
         location / {
             proxy_pass http://frontend:3000/;
         }
 
-        location /api {
+        location /api/ {
             proxy_pass http://backend:8000/;
         }
     }
