--- a/nginx.conf
+++ b/nginx.conf
@@ -6,7 +6,7 @@ http {
         server_name corrdev.ru www.corrdev.ru;
 
         location /.well-known/acme-challenge/ {
-            root /var/www/certbot;
+            alias /var/www/certbot/.well-known/acme-challenge/;
         }
 
         location / {
@@ -16,20 +16,28 @@ http {
 
     server {
         listen 443 ssl;
-        server_name yourdomain.com;
+        server_name corrdev.ru www.corrdev.ru;
 
-        ssl_certificate /etc/letsencrypt/live/yourdomain.com/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/yourdomain.com/privkey.pem;
+        ssl_certificate /etc/letsencrypt/live/corrdev.ru/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/corrdev.ru/privkey.pem;
 
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!MD5;
 
         location / {
             proxy_pass http://frontend:3000/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
 
         location /api/ {
             proxy_pass http://backend:8000/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
 }
