--- a/nginx.conf
+++ b/nginx.conf
@@ -18,11 +18,8 @@ http {
         listen 443 ssl;
         server_name corrdev.ru www.corrdev.ru;
 
-        ssl_certificate /etc/letsencrypt/live/corrdev.ru/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/corrdev.ru/privkey.pem;
-
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers HIGH:!aNULL:!MD5;
+        ssl_certificate /etc/ssl/certs/fullchain.pem;
+        ssl_certificate_key /etc/ssl/certs/privkey.pem;
 
         location / {
             proxy_pass http://frontend:3000/;
