--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,31 +13,11 @@ services:
       - "443:443"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - certbot-etc:/etc/letsencrypt
-      - certbot-www:/var/www/certbot
+      - ./certs:/etc/ssl/certs:ro
       - ./frontend/build:/usr/share/nginx/html:ro
     depends_on:
       - backend
       - frontend
-    networks:
-      - dev
-
-  certbot:
-    image: certbot/certbot
-    volumes:
-      - certbot-etc:/etc/letsencrypt
-      - certbot-www:/var/www/certbot
-    entrypoint:
-      - certbot
-      - certonly
-      - --webroot
-      - --webroot-path=/var/www/certbot
-      - --email=your@email.com
-      - --agree-tos
-      - --no-eff-email
-      - -d
-      - corrdev.ru
-      - --non-interactive
     networks:
       - dev
 
