--- a/nginx.conf
+++ b/nginx.conf
@@ -5,10 +5,6 @@ http {
         listen 80;
         server_name corrdev.ru www.corrdev.ru;
 
-        location /.well-known/acme-challenge/ {
-            alias /var/www/certbot/.well-known/acme-challenge/;
-        }
-
         location / {
             return 301 https://$host$request_uri;
         }
@@ -20,6 +16,9 @@ http {
 
         ssl_certificate /etc/ssl/certs/fullchain.pem;
         ssl_certificate_key /etc/ssl/certs/privkey.pem;
+
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!MD5;
 
         location / {
             proxy_pass http://frontend:3000/;
@@ -35,6 +34,10 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location /.well-known/acme-challenge/ {
+            alias /var/www/certbot/.well-known/acme-challenge/;
         }
     }
 }
